--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.16</version>
 		<relativePath/>
 	</parent>
-	<groupId>net.engineeringdigest</groupId>
-	<artifactId>journalApp</artifactId>
+	<groupId>com.abdullah_al_masum</groupId>
+	<artifactId>journalAppByMasum</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Journal App</name>
-	<description>E2EE Journal App</description>
+	<name>Masum's Journal App</name>
+	<description>Learning Spring Boot through this project</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
